@@ -79,7 +79,7 @@ if ($PRINT_HELP) {
     print "\n--ignore-files=FILES   Files or directories which should not be scanned";
     print "\n                       May be used more than once for multiple directories";
     print "\n--output-dir=DIRNAME   Directory to put the generated Docbook files in";
-    print "\n--tmpl-dir=DIRNAME     DIRECTORY in which template files may be found";
+    print "\n--tmpl-dir=DIRNAME     Directory in which template files may be found";
     print "\n--main-sgml-file=FILE  File containing the toplevel SGML file.";
     print "\n--output-format=FORMAT The format to use for the generated docbook, XML or SGML.";
     print "\n--sgml-mode            Allow Docbook markup in inline documentation.";
