@@ -1,3 +1,13 @@
+Thu Jan 15 23:06:10 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk-doc.xsl: Set the chunk.fast parameter, to gain some
+	speed.
+
+Thu Jan 15 23:05:23 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtkdoc-fixxref.in: Make it work again without explicit 
+	--module.
+
 Sat Dec 27 01:36:08 2003  Matthias Clasen  <maclas@gmx.de>
 
 	* gtkdoc-scangobj.in: 
